# learning-python-pandas

./: CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml
pandas_demos/: dataframe_examples.py
pandas_demos/data/: hecate.py  info.py  nutrition.csv  nutrition.py
pandas_demos/dataframes/: from_dict.py  groupby.py
pandas_demos/series/: from_dict.py
tests_notebooks/: .envrc  dataframes.ipynb  pyproject.toml
tests_unit/pandas_demos/: test_dataframe_examples.py
tests_unit/pandas_demos/dataframes/: test_from_dict.py
tests_unit/pandas_demos/series/: test_from_dict.py
