[tool.poetry]
name = "pandas-demos-noteboks"
version = "1.0.0"
description = "Jupyter Notebooks for pandas_demos Custom Python Package"
authors = [
    "Tommy P. Keane <talk.to.tommypkeane@gmail.com>",
]
maintainers = [
    "Tommy P. Keane <talk.to.tommypkeane@gmail.com>",
]
homepage = "https://www.tommypkeane.com"
repository = "https://github.com/tommypkeane/learning-python-pandas"
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pandas_demos = {path = "../", develop = true}
jupyterlab = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
hypothesis = "^6.68.2"
black = "^23.1.0"
pylint = "^2.17.0"
isort = "^5.12.0"
